Bug 1727157 - Remove GC stats phase for gray unmarking r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D124625